--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'come.projects'
-version = '0.1.1-Refundable'
+version = '1.1.1-Statistics'
 sourceCompatibility = '17'
 
 repositories {
